# tempVPN

./: .gitignore  README.md  foundry.toml
.github/workflows/: release-vpn-client.yml
foundry/test/: AccountKeychainWorkflow.t.sol
foundry/test/mocks/: MockAccountKeychain.sol
rust/mpp-payment-service/: .env.example  Cargo.toml
script/: AuthorizeSessionKey.s.sol
src/interfaces/: IAccountKeychain.sol
tempvpn/: Cargo.toml  README.md  SKILL.md
tempvpn/configs/: vpn-client.example.toml  vpn-node.example.toml  wg-server.example.conf
tempvpn/crates/vpn-client-cli/src/: cli.rs  config.rs  error.rs  health.rs  keygen.rs  main.rs  node_client.rs  status.rs
tempvpn/crates/vpn-node-daemon/: Cargo.toml
tempvpn/crates/vpn-node-daemon/src/: cleanup.rs  config.rs  error.rs  ip_allocator.rs  main.rs  routes.rs  sessions.rs
tunnel/: .gitignore  README.md  outputs.tf  variables.tf
tunnel_terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
tunnel_terraform/scripts/: startup.sh.tftpl
vpnnode/: Cargo.toml  README.md
vpnnode/configs/: agent-egress.example.toml  vpn-client.example.toml  vpn-node.example.toml  wg-server.example.conf
vpnnode/crates/agent-egress-cli/: Cargo.toml
vpnnode/crates/agent-egress-cli/src/: cli.rs  config.rs  error.rs  main.rs  node_client.rs  process.rs  proxy.rs  wireguard_client.rs
vpnnode/crates/vpn-client-cli/: Cargo.toml
vpnnode/crates/vpn-client-cli/src/: cli.rs  config.rs  error.rs  main.rs  status.rs  wireguard_client.rs
vpnnode/crates/vpn-node-daemon/: Cargo.toml
vpnnode/crates/vpn-node-daemon/src/: config.rs  error.rs  main.rs  routes.rs  wireguard.rs
