[workspace]
members = [
    "crates/vpn-node-daemon",
    "crates/vpn-client-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }
mpp = { version = "=0.10.3", features = ["tempo", "server", "axum"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
