[package]
name = "tempo-mpp-payment-service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
mpp = { version = "=0.10.3", features = ["tempo", "server", "client", "axum"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
